fix max button size on small screens
Fixed the max button size on small screens. Removed max wrap border on small screens. Used primary color for max button

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -8,6 +8,5 @@ $color-link: var(--color-blue);
 $transition-time: 0.1s;
 $color-button-primary: var(--color-blue);
 $color-button-secondary: var(--color-white);
-$color-button-tertiary: var(--color-blue-light);
 $color-button-text-primary: var(--color-white);
 $color-button-text-secondary: var(--color-blue);
